fix: workflow YAML indentation, shell directive, agent.md update
- rc.yaml bench job: rewrite with consistent 2-space indentation,
  add 'shell: bash' to Native benchmark step
- release.yaml nuget-publish: fix dotnet push indentation
- agent.md: comprehensive update for Panama FFI, multi-size benchmarks,
  new benchmark output format documentation, corrected gotchas,
  NuGet trusted publishing (OIDC) notes

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>